Configured SpotBugs and stricter javac lint